--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "remove-accents": "^0.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.6"
